--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   <body id="Home">
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light fw-bold fst-italic shadow-sm fixed-top" style="background-color: #6bf3e8">
-      <div class="container">
-        <a class="navbar-brand" href="#">Biologi</a>
+      <div class="container-fluid">
+        <a class="navbar-brand ms-3" href="#">Biologi</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -275,6 +275,9 @@
     </footer>
     <!-- akhir footer -->
 
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
     <!-- Optional JavaScript; choose one of the two! -->
     <!-- Animasi -->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
@@ -282,8 +285,5 @@
       AOS.init();
     </script>
     <!-- akhir Animasi -->
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
 </html>
