--- a/simpatrik.html
+++ b/simpatrik.html
@@ -17,8 +17,8 @@
   <body id="Home">
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light fw-bold fst-italic shadow-sm fixed-top" style="background-color: #6bf3e8">
-      <div class="container">
-        <a class="navbar-brand" href="#">Biologi</a>
+      <div class="container-fluid">
+        <a class="navbar-brand ms-3" href="#">Biologi</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -44,7 +44,9 @@
 
     <!-- Jumbotron -->
     <section class="jumbotron text-center">
-      <h1 class="display-5 fst-italic fw-bold" data-aos="fade">Pengisolasian Simpatrik</h1>
+      <div class="container">
+        <h1 class="display-5 fst-italic fw-bold" data-aos="fade">Pengisolasian Simpatrik</h1>
+      </div>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
           fill="#ffffff"
