--- a/index.html
+++ b/index.html
@@ -44,9 +44,11 @@
 
     <!-- Jumbotron -->
     <section class="jumbotron text-center">
-      <img src="asset/bio_profile.png" width="300" data-aos="fade" />
-      <h1 class="display-5 fst-italic fw-bold" data-aos="fade">Spesiasi Pada Mekanisme Pengisolasian di Spesiasi Simpatrik dan Alopatrik</h1>
-      <p class="lead fw-bold" style="padding-bottom: 3rem" data-aos="fade-up">Tugas Biologi Kelompok 7</p>
+      <div class="container">
+        <img src="asset/bio_profile.png" width="300" data-aos="fade" />
+        <h1 class="display-5 fst-italic fw-bold" data-aos="fade">Spesiasi Pada Mekanisme Pengisolasian di Spesiasi Simpatrik dan Alopatrik</h1>
+        <p class="lead fw-bold" style="padding-bottom: 3rem" data-aos="fade-up">Tugas Biologi Kelompok 7</p>
+      </div>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
           fill="#ffffff"
