--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   <body id="Home">
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light fw-bold fst-italic shadow-sm fixed-top" style="background-color: #6bf3e8">
-      <div class="container-fluid">
-        <a class="navbar-brand ms-3" href="#">Biologi</a>
+      <div class="container">
+        <a class="navbar-brand" href="#">Biologi</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -44,7 +44,7 @@
 
     <!-- Jumbotron -->
     <section class="jumbotron text-center">
-      <div class="container">
+      <div class="container-fluid">
         <img src="asset/bio_profile.png" width="300" data-aos="fade" />
         <h1 class="display-5 fst-italic fw-bold" data-aos="fade">Spesiasi Pada Mekanisme Pengisolasian di Spesiasi Simpatrik dan Alopatrik</h1>
         <p class="lead fw-bold" style="padding-bottom: 3rem" data-aos="fade-up">Tugas Biologi Kelompok 7</p>
@@ -61,7 +61,7 @@
 
     <!-- Spesiasi -->
     <section id="spesiasi">
-      <div class="container" style="padding-bottom: 4rem">
+      <div class="container-fluid" style="padding-bottom: 4rem">
         <div class="row text-center" style="padding-bottom: 2rem">
           <div class="col">
             <h2 class="fw-bold" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000">Spesiasi</h2>
@@ -95,7 +95,7 @@
 
     <!-- Spesies -->
     <section id="spesies" style="background-color: #e2edff">
-      <div class="container" style="padding-bottom: 4rem">
+      <div class="container-fluid" style="padding-bottom: 4rem">
         <div class="row text-center" style="padding-bottom: 2rem">
           <div class="col">
             <h2 class="fw-bold" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000">Spesies</h2>
@@ -130,7 +130,7 @@
 
     <!-- Pengisolasian -->
     <section id="pengisolasian">
-      <div class="container" style="padding-bottom: 4rem">
+      <div class="container-fluid" style="padding-bottom: 4rem">
         <div class="row text-center" style="padding-bottom: 2rem">
           <div class="col">
             <h2 class="fw-bold" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000">Mekanisme Pengisolasian</h2>
@@ -196,7 +196,7 @@
 
     <!-- Istilah -->
     <section id="istilah" style="background-color: #e2edff">
-      <div class="container" style="padding-bottom: 4rem">
+      <div class="container-fluid" style="padding-bottom: 4rem">
         <div class="row text-center" style="padding-bottom: 2rem">
           <div class="col">
             <h2 class="fw-bold" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000">Istilah Dalam Spesiasi</h2>
