--- a/simpatrik.html
+++ b/simpatrik.html
@@ -17,8 +17,8 @@
   <body id="Home">
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light fw-bold fst-italic shadow-sm fixed-top" style="background-color: #6bf3e8">
-      <div class="container-fluid">
-        <a class="navbar-brand ms-3" href="#">Biologi</a>
+      <div class="container">
+        <a class="navbar-brand" href="#">Biologi</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -44,7 +44,7 @@
 
     <!-- Jumbotron -->
     <section class="jumbotron text-center">
-      <div class="container">
+      <div class="container-fluid">
         <h1 class="display-5 fst-italic fw-bold" data-aos="fade">Pengisolasian Simpatrik</h1>
       </div>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
@@ -59,7 +59,7 @@
 
     <!-- Spesiasi -->
     <section id="spesiasi">
-      <div class="container" style="padding-bottom: 4rem">
+      <div class="container-fluid" style="padding-bottom: 4rem">
         <div class="row justify-content-center">
           <div class="col-md text-center">
             <img src="asset/1.png" width="300" data-aos="fade-left" />
