--- a/alopatrik.html
+++ b/alopatrik.html
@@ -44,7 +44,7 @@
 
     <!-- Jumbotron -->
     <section class="jumbotron text-center">
-      <div class="container-fluid">
+      <div class="container">
         <h1 class="display-5 fst-italic fw-bold" data-aos="fade">Pengisolasian Alopatrik</h1>
       </div>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
@@ -59,12 +59,12 @@
 
     <!-- Spesiasi -->
     <section id="spesiasi">
-      <div class="container-fluid" style="padding-bottom: 4rem">
+      <div class="container" style="padding-bottom: 4rem">
         <div class="row justify-content-center">
-          <div class="col-md text-center">
+          <div class="col-md-6 text-center">
             <img src="asset/1.png" width="300" data-aos="fade-left" />
           </div>
-          <div class="col-md">
+          <div class="col-md-6">
             <p class="fw-bold text-secondary mt-3" data-aos="zoom-in-up">
               Spesiasi Alopatrik atau dikenal juga Spesiasi Geografis adalah spesiasi yang berlangsung ketika populasi spesies yang sama terisolasi satu sama lain hingga tak terjadi pertukaran gen. Bila batas geografis nantinya hilang,
               anggota kedua populasi mungkin sudah tak mampu berkawin, sehingga keduanya telah menjadi spesies yang berbeda
@@ -72,9 +72,9 @@
           </div>
         </div>
         <hr />
-        <div class="row mt-5 justify-content-center">
-          <div class="col-md">
-            <p class="fw-bold text-secondary mt-3" data-aos="zoom-in-up">
+        <div class="row mt-5">
+          <div class="col-md-6 text-center">
+            <p class="fw-bold text-secondary mt-3" align="left" data-aos="zoom-in-up">
               Disebabkan oleh adanya penghalang (sawar) geografis, antara lain :<br />
               <br />
               1. Sungai<br />
@@ -83,16 +83,16 @@
               4. Dll<br />
             </p>
           </div>
-          <div class="col-md text-center">
+          <div class="col-md-6 text-center">
             <img src="asset/alopatrik.png" width="200" height="200" data-aos="fade-left" />
           </div>
         </div>
         <hr />
         <div class="row justify-content-center">
-          <div class="col-md text-center">
+          <div class="col-md-6 text-center">
             <img src="asset/2.png" width="300" data-aos="fade-left" />
           </div>
-          <div class="col-md">
+          <div class="col-md-6">
             <p class="fw-bold text-secondary mt-3" data-aos="zoom-in-up">
               Isolasi geografis dan penghalang geografisnya dapat mencegah alela dari suatu populasi menyebar kedalam populasi lainnya sehingga tidak terjadi aliran pertukaran gen diantara populasi tersebut. Dengan demikian,
               populasi-populasi tersebut memiliki lukang gen yang terpisah.
