--- a/simpatrik.html
+++ b/simpatrik.html
@@ -44,7 +44,7 @@
 
     <!-- Jumbotron -->
     <section class="jumbotron text-center">
-      <div class="container-fluid">
+      <div class="container">
         <h1 class="display-5 fst-italic fw-bold" data-aos="fade">Pengisolasian Simpatrik</h1>
       </div>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
@@ -59,12 +59,12 @@
 
     <!-- Spesiasi -->
     <section id="spesiasi">
-      <div class="container-fluid" style="padding-bottom: 4rem">
+      <div class="container" style="padding-bottom: 4rem">
         <div class="row justify-content-center">
-          <div class="col-md text-center">
+          <div class="col-md-6 text-center">
             <img src="asset/1.png" width="300" data-aos="fade-left" />
           </div>
-          <div class="col-md">
+          <div class="col-md-6">
             <p class="fw-bold text-secondary mt-3" data-aos="zoom-in-up">
               Spesiasi Simpantrik adalah suatu proses Ketika spesies baru berevolusi dari suatu spesies nenek moyang yang tinggal diwilayah yang sama. Simpantrik adalah istilah yang mengacu pada organisme diwilayah yang sama.
             </p>
@@ -72,7 +72,7 @@
         </div>
         <hr />
         <div class="row mt-5 justify-content-center">
-          <div class="col-md">
+          <div class="col-md-6">
             <p class="fw-bold text-secondary mt-3" data-aos="zoom-in-up">
               Spesiasi Simpantrik terjadi melalui beberapa cara, yaitu:<br />
               <br />
@@ -84,7 +84,7 @@
               6. Isolasi Hibrid
             </p>
           </div>
-          <div class="col-md text-center">
+          <div class="col-md-6 text-center">
             <img src="asset/simpatrik.png" width="200" height="200" data-aos="fade-left" class="mb-4" />
           </div>
         </div>
@@ -93,7 +93,7 @@
           <div class="col-md text-center">
             <img src="asset/2.png" width="300" data-aos="fade-left" />
           </div>
-          <div class="col-md">
+          <div class="col-md-6">
             <div class="row" style="margin-bottom: 5rem" data-aos="fade-up">
               <div id="carouselExampleControlsNoTouching1" class="carousel slide" data-bs-touch="false" data-bs-interval="false">
                 <div class="carousel-inner">
