--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <!-- Jumbotron -->
     <section class="jumbotron text-center">
-      <div class="container-fluid">
+      <div class="container">
         <img src="asset/bio_profile.png" width="300" data-aos="fade" />
         <h1 class="display-5 fst-italic fw-bold" data-aos="fade">Spesiasi Pada Mekanisme Pengisolasian di Spesiasi Simpatrik dan Alopatrik</h1>
         <p class="lead fw-bold" style="padding-bottom: 3rem" data-aos="fade-up">Tugas Biologi Kelompok 7</p>
@@ -61,17 +61,17 @@
 
     <!-- Spesiasi -->
     <section id="spesiasi">
-      <div class="container-fluid" style="padding-bottom: 4rem">
+      <div class="container" style="padding-bottom: 4rem">
         <div class="row text-center" style="padding-bottom: 2rem">
           <div class="col">
             <h2 class="fw-bold" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000">Spesiasi</h2>
           </div>
         </div>
         <div class="row justify-content-center">
-          <div class="col-md text-center">
+          <div class="col-md-6 text-center">
             <img src="asset/1.png" width="300" data-aos="fade-left" />
           </div>
-          <div class="col-md">
+          <div class="col-md-6">
             <p class="fw-bold text-secondary mt-3" data-aos="zoom-in-up">Pengertian : Pembentukan dua atau lebih spesies dari satu spesies yang telah ada atau telah punah.</p>
             <p class="fw-bold text-secondary" data-aos="zoom-in-up">
               Spesiasi merupakan puncak dari proses evolusi.<br />
@@ -95,14 +95,14 @@
 
     <!-- Spesies -->
     <section id="spesies" style="background-color: #e2edff">
-      <div class="container-fluid" style="padding-bottom: 4rem">
+      <div class="container" style="padding-bottom: 4rem">
         <div class="row text-center" style="padding-bottom: 2rem">
           <div class="col">
             <h2 class="fw-bold" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000">Spesies</h2>
           </div>
         </div>
         <div class="row justify-content-center">
-          <div class="col-md">
+          <div class="col-md-6">
             <p class="fw-bold text-secondary" data-aos="zoom-in-up">Pengertian : Anggota suatu populasi yang mampu mengadakan pertukaran gen atau melakukan perkawinan secara alami (Interbreeding).</p>
             <p class="fw-bold text-secondary" data-aos="zoom-in-up">
               Spesies dapat menghasilkan keturunan yang fertil. Keturunan fertil merupakan keturunan yang jika dikawinkan dengan spesies yang sejenis akan menghasilkan embrio baru atau keturunan tersebut juga bisa menghasilkan keturunan
@@ -113,7 +113,7 @@
               - Aliran Gen adalah Pertukaran alel didalam dan diantara populasi suatu spesies.
             </p>
           </div>
-          <div class="col-md text-center">
+          <div class="col-md-6 text-center">
             <img src="asset/2.png" width="300" class="mt-3" data-aos="fade-right" />
           </div>
         </div>
@@ -130,7 +130,7 @@
 
     <!-- Pengisolasian -->
     <section id="pengisolasian">
-      <div class="container-fluid" style="padding-bottom: 4rem">
+      <div class="container" style="padding-bottom: 4rem">
         <div class="row text-center" style="padding-bottom: 2rem">
           <div class="col">
             <h2 class="fw-bold" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000">Mekanisme Pengisolasian</h2>
@@ -196,14 +196,14 @@
 
     <!-- Istilah -->
     <section id="istilah" style="background-color: #e2edff">
-      <div class="container-fluid" style="padding-bottom: 4rem">
+      <div class="container" style="padding-bottom: 4rem">
         <div class="row text-center" style="padding-bottom: 2rem">
           <div class="col">
             <h2 class="fw-bold" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000">Istilah Dalam Spesiasi</h2>
           </div>
         </div>
         <div class="row align-items-center">
-          <div class="col-md">
+          <div class="col-md-6">
             <div class="row" style="margin-bottom: 5rem" data-aos="fade-up">
               <div id="carouselExampleControlsNoTouching1" class="carousel slide" data-bs-touch="false" data-bs-interval="false">
                 <div class="carousel-inner">
@@ -256,7 +256,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md text-center">
+          <div class="col-md-6 text-center">
             <img src="asset/2.png" width="300" class="mt-3" data-aos="fade-right" />
           </div>
         </div>
