--- a/index.html
+++ b/index.html
@@ -63,15 +63,15 @@
     <section id="spesiasi">
       <div class="container" style="padding-bottom: 4rem">
         <div class="row text-center" style="padding-bottom: 2rem">
-          <div class="col">
-            <h2 class="fw-bold" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000">Spesiasi</h2>
-          </div>
+          <h2 class="fw-bold" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000">Spesiasi</h2>
         </div>
-        <div class="row justify-content-center">
-          <div class="col-md-6 text-center">
+
+        <div class="row">
+          <div class="col-md-6 col-sm-12 text-center">
             <img src="asset/1.png" width="300" data-aos="fade-left" />
           </div>
-          <div class="col-md-6">
+
+          <div class="col-md-6 col-sm-12">
             <p class="fw-bold text-secondary mt-3" data-aos="zoom-in-up">Pengertian : Pembentukan dua atau lebih spesies dari satu spesies yang telah ada atau telah punah.</p>
             <p class="fw-bold text-secondary" data-aos="zoom-in-up">
               Spesiasi merupakan puncak dari proses evolusi.<br />
@@ -97,12 +97,13 @@
     <section id="spesies" style="background-color: #e2edff">
       <div class="container" style="padding-bottom: 4rem">
         <div class="row text-center" style="padding-bottom: 2rem">
-          <div class="col">
+          <div class="col-12">
             <h2 class="fw-bold" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000">Spesies</h2>
           </div>
         </div>
-        <div class="row justify-content-center">
-          <div class="col-md-6">
+
+        <div class="row">
+          <div class="col-md-6 col-sm-12">
             <p class="fw-bold text-secondary" data-aos="zoom-in-up">Pengertian : Anggota suatu populasi yang mampu mengadakan pertukaran gen atau melakukan perkawinan secara alami (Interbreeding).</p>
             <p class="fw-bold text-secondary" data-aos="zoom-in-up">
               Spesies dapat menghasilkan keturunan yang fertil. Keturunan fertil merupakan keturunan yang jika dikawinkan dengan spesies yang sejenis akan menghasilkan embrio baru atau keturunan tersebut juga bisa menghasilkan keturunan
@@ -113,7 +114,8 @@
               - Aliran Gen adalah Pertukaran alel didalam dan diantara populasi suatu spesies.
             </p>
           </div>
-          <div class="col-md-6 text-center">
+
+          <div class="col-md-6 col-sm-12 text-center">
             <img src="asset/2.png" width="300" class="mt-3" data-aos="fade-right" />
           </div>
         </div>
@@ -132,15 +134,14 @@
     <section id="pengisolasian">
       <div class="container" style="padding-bottom: 4rem">
         <div class="row text-center" style="padding-bottom: 2rem">
-          <div class="col">
-            <h2 class="fw-bold" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000">Mekanisme Pengisolasian</h2>
-          </div>
+          <h2 class="fw-bold" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000">Mekanisme Pengisolasian</h2>
         </div>
-        <div class="row justify-content-center">
-          <div class="col-md text-center">
+
+        <div class="row">
+          <div class="col-md-6 col-sm-12 text-center">
             <img src="asset/1.png" width="300" data-aos="fade-left" />
           </div>
-          <div class="col-md">
+          <div class="col-md-6 col-sm-12">
             <p class="fw-bold text-secondary mt-3" data-aos="zoom-in-up">Pengertian : Beberapa macam penghalang yang efektif mencegah terjadinya pertukaran gen antar populasi.</p>
             <p class="fw-bold text-secondary" data-aos="zoom-in-up">
               Terjadi Ketika suatu populasi terisolasi dari sekumpulan populasi utama dan lukang gen terisolasi selama ratusan bahka ribuan tahun.<br />
@@ -151,6 +152,7 @@
             </p>
           </div>
         </div>
+
         <div class="row mt-3" style="margin-bottom: 5rem" data-aos="fade-up">
           <div id="carouselExampleControlsNoTouching" class="carousel slide" data-bs-touch="false" data-bs-interval="false">
             <div class="carousel-inner text-center">
@@ -163,6 +165,7 @@
                   </div>
                 </div>
               </div>
+
               <div class="carousel-item">
                 <div class="card shadow mb-3" style="width: 18rem; border-radius: 15px; margin: auto">
                   <div class="card-body">
@@ -172,6 +175,7 @@
                   </div>
                 </div>
               </div>
+
               <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControlsNoTouching" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
@@ -198,12 +202,13 @@
     <section id="istilah" style="background-color: #e2edff">
       <div class="container" style="padding-bottom: 4rem">
         <div class="row text-center" style="padding-bottom: 2rem">
-          <div class="col">
+          <div class="col-12">
             <h2 class="fw-bold" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000">Istilah Dalam Spesiasi</h2>
           </div>
         </div>
+
         <div class="row align-items-center">
-          <div class="col-md-6">
+          <div class="col-md-6 col-sm-12">
             <div class="row" style="margin-bottom: 5rem" data-aos="fade-up">
               <div id="carouselExampleControlsNoTouching1" class="carousel slide" data-bs-touch="false" data-bs-interval="false">
                 <div class="carousel-inner">
@@ -256,7 +261,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6 text-center">
+          <div class="col-md-6 col-sm-12 text-center">
             <img src="asset/2.png" width="300" class="mt-3" data-aos="fade-right" />
           </div>
         </div>
