--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
         </div>
 
         <div class="row">
-          <div class="col-md-6 col-sm-12 text-center">
+          <div class="col-6 text-center">
             <img src="asset/1.png" width="300" data-aos="fade-left" />
           </div>
 
-          <div class="col-md-6 col-sm-12">
+          <div class="col-6">
             <p class="fw-bold text-secondary mt-3" data-aos="zoom-in-up">Pengertian : Pembentukan dua atau lebih spesies dari satu spesies yang telah ada atau telah punah.</p>
             <p class="fw-bold text-secondary" data-aos="zoom-in-up">
               Spesiasi merupakan puncak dari proses evolusi.<br />
