--- a/alopatrik.html
+++ b/alopatrik.html
@@ -62,7 +62,7 @@
       <div class="container" style="padding-bottom: 4rem">
         <div class="row justify-content-center">
           <div class="col-md-6 text-center">
-            <img src="asset/1.png" width="300" data-aos="fade-left" />
+            <img src="asset/1.png" class="img-custom" data-aos="fade-left" />
           </div>
           <div class="col-md-6">
             <p class="fw-bold text-secondary mt-3" data-aos="zoom-in-up">
@@ -84,13 +84,13 @@
             </p>
           </div>
           <div class="col-md-6 text-center">
-            <img src="asset/alopatrik.png" width="200" height="200" data-aos="fade-left" />
+            <img src="asset/alopatrik.png" class="img-custom" height="200" data-aos="fade-left" />
           </div>
         </div>
         <hr />
         <div class="row justify-content-center">
           <div class="col-md-6 text-center">
-            <img src="asset/2.png" width="300" data-aos="fade-left" />
+            <img src="asset/2.png" class="img-custom" data-aos="fade-left" />
           </div>
           <div class="col-md-6">
             <p class="fw-bold text-secondary mt-3" data-aos="zoom-in-up">
