--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <!-- Jumbotron -->
     <section class="jumbotron text-center">
       <div class="container">
-        <img src="asset/bio_profile.png" width="300" data-aos="fade" />
+        <img src="asset/bio_profile.png" class="img-custom" data-aos="fade" />
         <h1 class="display-5 fst-italic fw-bold" data-aos="fade">Spesiasi Pada Mekanisme Pengisolasian di Spesiasi Simpatrik dan Alopatrik</h1>
         <p class="lead fw-bold" style="padding-bottom: 3rem" data-aos="fade-up">Tugas Biologi Kelompok 7</p>
       </div>
@@ -68,7 +68,7 @@
 
         <div class="row">
           <div class="col-md-6 col-sm-12 text-center">
-            <img src="asset/1.png" width="300" data-aos="fade-left" />
+            <img src="asset/1.png" class="img-custom" data-aos="fade-left" />
           </div>
 
           <div class="col-md-6 col-sm-12">
@@ -116,7 +116,7 @@
           </div>
 
           <div class="col-md-6 col-sm-12 text-center">
-            <img src="asset/2.png" width="300" class="mt-3" data-aos="fade-right" />
+            <img src="asset/2.png" class="img-custom" class="mt-3" data-aos="fade-right" />
           </div>
         </div>
       </div>
@@ -139,7 +139,7 @@
 
         <div class="row">
           <div class="col-md-6 col-sm-12 text-center">
-            <img src="asset/1.png" width="300" data-aos="fade-left" />
+            <img src="asset/1.png" class="img-custom" data-aos="fade-left" />
           </div>
           <div class="col-md-6 col-sm-12">
             <p class="fw-bold text-secondary mt-3" data-aos="zoom-in-up">Pengertian : Beberapa macam penghalang yang efektif mencegah terjadinya pertukaran gen antar populasi.</p>
@@ -262,7 +262,7 @@
             </div>
           </div>
           <div class="col-md-6 col-sm-12 text-center">
-            <img src="asset/2.png" width="300" class="mt-3" data-aos="fade-right" />
+            <img src="asset/2.png" class="img-custom" class="mt-3" data-aos="fade-right" />
           </div>
         </div>
       </div>
