--- a/simpatrik.html
+++ b/simpatrik.html
@@ -62,7 +62,7 @@
       <div class="container" style="padding-bottom: 4rem">
         <div class="row justify-content-center">
           <div class="col-md-6 text-center">
-            <img src="asset/1.png" width="300" data-aos="fade-left" />
+            <img src="asset/1.png" class="img-custom" data-aos="fade-left" />
           </div>
           <div class="col-md-6">
             <p class="fw-bold text-secondary mt-3" data-aos="zoom-in-up">
@@ -91,7 +91,7 @@
         <hr />
         <div class="row mt-5 justify-content-center">
           <div class="col-md text-center">
-            <img src="asset/2.png" width="300" data-aos="fade-left" />
+            <img src="asset/2.png" class="img-custom" data-aos="fade-left" />
           </div>
           <div class="col-md-6">
             <div class="row" style="margin-bottom: 5rem" data-aos="fade-up">
