--- a/index.html
+++ b/index.html
@@ -74,8 +74,6 @@
           <div class="col-md-6 col-sm-12">
             <p class="fw-bold text-secondary mt-3" data-aos="zoom-in-up">Pengertian : Pembentukan dua atau lebih spesies dari satu spesies yang telah ada atau telah punah.</p>
             <p class="fw-bold text-secondary" data-aos="zoom-in-up">
-              Spesiasi merupakan puncak dari proses evolusi.<br />
-
               Spesies yang terbentuk dari proses spesiasi berbeda dari spesies moyangnya.<br />
 
               Disebabkan oleh mekanisme pengisolasian, mutase dan seleksi alam, serta poliploidi (pada tanaman).
@@ -106,6 +104,7 @@
           <div class="col-md-6 col-sm-12">
             <p class="fw-bold text-secondary" data-aos="zoom-in-up">Pengertian : Anggota suatu populasi yang mampu mengadakan pertukaran gen atau melakukan perkawinan secara alami (Interbreeding).</p>
             <p class="fw-bold text-secondary" data-aos="zoom-in-up">
+              Spesies merupakan puncak dari proses evolusi.<br />
               Spesies dapat menghasilkan keturunan yang fertil. Keturunan fertil merupakan keturunan yang jika dikawinkan dengan spesies yang sejenis akan menghasilkan embrio baru atau keturunan tersebut juga bisa menghasilkan keturunan
               lain.<br />
               <br />
@@ -153,7 +152,7 @@
           </div>
         </div>
 
-        <div class="row mt-3" style="margin-bottom: 5rem" data-aos="fade-up">
+        <div class="row" style="margin-bottom: 5rem; margin-top: 5rem" data-aos="fade-up">
           <div id="carouselExampleControlsNoTouching" class="carousel slide" data-bs-touch="false" data-bs-interval="false">
             <div class="carousel-inner text-center">
               <div class="carousel-item active">
