--- a/simpatrik.html
+++ b/simpatrik.html
@@ -102,7 +102,8 @@
                       <div class="card-body">
                         <p class="card-text fw-bold">Isolasi Tingkah Laku</p>
                         <p class="card-text text-secondary fw-bold">
-                          Isolasi Tingkah Laku dapat mencegah terjadinya reproduksi jika, misalnya , suatu anggota populasi aktif pada malam hari (noktural), sedangkan anggota lainnya aktif disiang hari (dirual).
+                          Isolasi Tingkah Laku dapat mencegah terjadinya reproduksi jika, misalnya , suatu anggota populasi aktif pada malam hari (noktural), sedangkan anggota lainnya aktif disiang hari (dirual). Anggota populasi tersebut
+                          tidak dapat berreproduksi, walapun mereka berada didaerah yang sama.
                         </p>
                       </div>
                     </div>
@@ -112,8 +113,11 @@
                       <div class="card-body">
                         <p class="card-text fw-bold">Isolasi Ekologis</p>
                         <p class="card-text text-secondary fw-bold">
-                          Isolasi Ekologis adalah jika suatu anggota populasi hidup di puncak pohon, sedangkan anggota populasi lainnya gidup didalam tanah. Kedua anggota populasi tersebut menempati daerah yang sama, tetapi tidak dapat
-                          melakukan reproduksi karena tidak dapat bertemu.
+                          Isolasi Ekologis dapat menyebabkan isolasi reproduksi yang kemudian diikuti dengan spesiasi jika anggota populasi menempati habitat yang berbeda. <br />
+                          Contohnya : <br />
+                          <br />
+                          jika suatu anggota populasi hidup di puncak pohon, sedangkan anggota populasi lainnya hidup didalam tanah. Kedua anggota populasi tersebut menempati daerah yang sama, tetapi tidak dapat melakukan reproduksi karena
+                          tidak dapat bertemu.
                         </p>
                       </div>
                     </div>
@@ -136,7 +140,12 @@
                       <div class="card-body">
                         <p class="card-text fw-bold">Isolasi Mekanis</p>
                         <p class="card-text text-secondary fw-bold">
-                          Isolasi Mekanis Terjadi pada hewan atau tumbuhan yang reproduksinya dihambat oleh letak atau struktur alat kelamin ( genitalia ) yang tidak sesuai dengan pasangannya meskippun berasal dari stu spesies yang sama.
+                          Isolasi Mekanis Terjadi pada hewan atau tumbuhan yang reproduksinya dihambat oleh letak atau struktur alat kelamin ( genitalia ) yang tidak sesuai dengan pasangannya meskipun berasal dari satu spesies yang sama.
+                          <br />
+                          Contohnya :
+                          <br />
+                          <br />
+                          Sangat tidak mungkin bagi seekor anjing Great Dane untuk melakukan perkawinan dengan seekor anjing Chihuahua, kendati keduannya merupakan anggota spesies anjing (Canis Familiaris).
                         </p>
                       </div>
                     </div>
@@ -158,7 +167,13 @@
                     <div class="card shadow mb-3" style="width: 18rem; border-radius: 15px; margin: auto">
                       <div class="card-body">
                         <p class="card-text fw-bold">Isolasi Hibrid</p>
-                        <p class="card-text text-secondary fw-bold">Isolasi Hibrid terjadi Ketika dua organisme yang berbeda melakukan perkawinan, tetapi zigot hybrid yang terbentuk gagal berkembang mencapai tingkat kematangan seksual.</p>
+                        <p class="card-text text-secondary fw-bold">
+                          Isolasi Hibrid terjadi Ketika dua organisme yang berbeda melakukan perkawinan, tetapi zigot hybrid yang terbentuk gagal berkembang mencapai tingkat kematangan seksual. Kalaupun mampu berkembang mencapai tingkat
+                          kematangan seksual, individu hibrid yang terbentuk itu fertil atau steril. <br />
+                          Contohnya: <br />
+                          <br />
+                          Individu Zebrakey dihasilkan dari persilangan antara individu zebra dan keledai.
+                        </p>
                       </div>
                     </div>
                   </div>
