mengubah tombol prev dan next

--- a/simpatrik.html
+++ b/simpatrik.html
@@ -95,7 +95,7 @@
           </div>
           <div class="col-md-6">
             <div class="row" style="margin-bottom: 5rem" data-aos="fade-up">
-              <div id="carouselExampleControlsNoTouching1" class="carousel slide" data-bs-touch="false" data-bs-interval="false">
+              <div id="carouselExampleControlsNoTouching1" class="carousel carousel-dark slide" data-bs-touch="false" data-bs-interval="false">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
                     <div class="card shadow mb-3" style="width: 18rem; border-radius: 15px; margin: auto">
