--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         </div>
 
         <div class="row" style="margin-bottom: 5rem; margin-top: 5rem" data-aos="fade-up">
-          <div id="carouselExampleControlsNoTouching" class="carousel slide" data-bs-touch="false" data-bs-interval="false">
+          <div id="carouselExampleControlsNoTouching" class="carousel carousel-dark slide" data-bs-touch="false" data-bs-interval="false">
             <div class="carousel-inner text-center">
               <div class="carousel-item active">
                 <div class="card shadow mb-3" style="width: 18rem; border-radius: 15px; margin: auto">
@@ -209,7 +209,7 @@
         <div class="row align-items-center">
           <div class="col-md-6 col-sm-12">
             <div class="row" style="margin-bottom: 5rem" data-aos="fade-up">
-              <div id="carouselExampleControlsNoTouching1" class="carousel slide" data-bs-touch="false" data-bs-interval="false">
+              <div id="carouselExampleControlsNoTouching1" class="carousel carousel-dark slide" data-bs-touch="false" data-bs-interval="false">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
                     <div class="card shadow mb-3" style="width: 18rem; border-radius: 15px; margin: auto">
@@ -250,12 +250,10 @@
                   </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControlsNoTouching1" data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Previous</span>
+                  <span class="carousel-control-prev-icon"></span>
                 </button>
                 <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControlsNoTouching1" data-bs-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Next</span>
+                  <span class="carousel-control-next-icon"></span>
                 </button>
               </div>
             </div>
