--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="#Home">Home</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="TentangKami.html">Tentang Kami</a>
+            </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Materi </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -229,7 +232,7 @@
                         <p class="card-text fw-bold">Mekanisme Pengisolasian Prazigotik</p>
                         <p class="card-text text-secondary fw-bold">
                           Yaitu isolasi yang mencegah terjadinya perkawinan<br />
-                          ( sebelum sertilisasi ), Contoh:<br />
+                          ( sebelum fertilisasi ), Contoh:<br />
                           <br />
                           1. Isolasi Tingkah Laku<br />
                           2. Isolasi Ekologis<br />
