--- a/simpatrik.html
+++ b/simpatrik.html
@@ -27,6 +27,9 @@
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="index.html">Home</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="TentangKami.html">Tentang Kami</a>
+            </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Materi </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
