--- a/index.html
+++ b/index.html
@@ -16,22 +16,22 @@
   </head>
   <body id="Home">
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light fw-bold fst-italic shadow-sm fixed-top" style="background-color: #6bf3e8">
+    <nav class="navbar navbar-expand-lg navbar-light fw-bold fst-italic shadow-sm fixed-top" style="background-color: #93deff"">
       <div class="container">
-        <a class="navbar-brand" href="#">Biologi</a>
+        <a class="navbar-brand" href="#" style="color: #f7f7f7">Biologi</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#Home">Home</a>
+              <a class="nav-link active" aria-current="page" href="#Home" style="color: #f7f7f7">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="TentangKami.html">Tentang Kami</a>
+              <a class="nav-link active" aria-current="page" href="TentangKami.html" style="color: #f7f7f7">Tentang Kami</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Materi </a>
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color: #f7f7f7"> Materi </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item" href="#spesiasi">Spesiasi</a></li>
                 <li><a class="dropdown-item" href="#spesies">Spesies</a></li>
@@ -49,12 +49,12 @@
     <section class="jumbotron text-center">
       <div class="container">
         <img src="asset/bio_profile.png" class="img-custom" data-aos="fade" />
-        <h1 class="display-5 fst-italic fw-bold" data-aos="fade">Spesiasi Pada Mekanisme Pengisolasian di Spesiasi Simpatrik dan Alopatrik</h1>
-        <p class="lead fw-bold" style="padding-bottom: 3rem" data-aos="fade-up">Tugas Biologi Kelompok 7</p>
+        <h1 class="display-5 fst-italic fw-bold" data-aos="fade" style="color: #f7f7f7">Spesiasi Pada Mekanisme Pengisolasian di Spesiasi Simpatrik dan Alopatrik</h1>
+        <p class="fw-bold lead" data-aos="fade-up" style="color: #f7f7f7; padding-bottom: 3rem">Tugas Biologi Kelompok 7</p>
       </div>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
-          fill="#ffffff"
+          fill="#333744"
           fill-opacity="1"
           d="M0,192L40,197.3C80,203,160,213,240,197.3C320,181,400,139,480,138.7C560,139,640,181,720,176C800,171,880,117,960,117.3C1040,117,1120,171,1200,202.7C1280,235,1360,245,1400,250.7L1440,256L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z"
         ></path>
@@ -66,7 +66,7 @@
     <section id="spesiasi">
       <div class="container" style="padding-bottom: 4rem">
         <div class="row text-center" style="padding-bottom: 2rem">
-          <h2 class="fw-bold" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000">Spesiasi</h2>
+          <h2 class="fw-bold" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000" style="color: #f7f7f7">Spesiasi</h2>
         </div>
 
         <div class="row">
@@ -75,8 +75,8 @@
           </div>
 
           <div class="col-md-6 col-sm-12">
-            <p class="fw-bold text-secondary mt-3" data-aos="zoom-in-up">Pengertian : Pembentukan dua atau lebih spesies dari satu spesies yang telah ada atau telah punah.</p>
-            <p class="fw-bold text-secondary" data-aos="zoom-in-up">
+            <p class="fw-bold  mt-3" data-aos="zoom-in-up" style="color: #f7f7f7">Pengertian : Pembentukan dua atau lebih spesies dari satu spesies yang telah ada atau telah punah.</p>
+            <p class="fw-bold " data-aos="zoom-in-up" style="color: #f7f7f7">
               Spesies yang terbentuk dari proses spesiasi berbeda dari spesies moyangnya.<br />
 
               Disebabkan oleh mekanisme pengisolasian, mutase dan seleksi alam, serta poliploidi (pada tanaman).
@@ -86,7 +86,7 @@
       </div>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
-          fill="#e2edff"
+          fill="#f7f7f7"
           fill-opacity="1"
           d="M0,192L34.3,208C68.6,224,137,256,206,234.7C274.3,213,343,139,411,117.3C480,96,549,128,617,149.3C685.7,171,754,181,823,170.7C891.4,160,960,128,1029,144C1097.1,160,1166,224,1234,229.3C1302.9,235,1371,181,1406,154.7L1440,128L1440,320L1405.7,320C1371.4,320,1303,320,1234,320C1165.7,320,1097,320,1029,320C960,320,891,320,823,320C754.3,320,686,320,617,320C548.6,320,480,320,411,320C342.9,320,274,320,206,320C137.1,320,69,320,34,320L0,320Z"
         ></path>
@@ -95,18 +95,18 @@
     <!-- Akhir Spesiasi -->
 
     <!-- Spesies -->
-    <section id="spesies" style="background-color: #e2edff">
+    <section id="spesies" style="background-color: #f7f7f7">
       <div class="container" style="padding-bottom: 4rem">
         <div class="row text-center" style="padding-bottom: 2rem">
           <div class="col-12">
-            <h2 class="fw-bold" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000">Spesies</h2>
+            <h2 class="fw-bold" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000" style="color:#616571;">Spesies</h2>
           </div>
         </div>
 
         <div class="row">
           <div class="col-md-6 col-sm-12">
-            <p class="fw-bold text-secondary" data-aos="zoom-in-up">Pengertian : Anggota suatu populasi yang mampu mengadakan pertukaran gen atau melakukan perkawinan secara alami (Interbreeding).</p>
-            <p class="fw-bold text-secondary" data-aos="zoom-in-up">
+            <p class="fw-bold " data-aos="zoom-in-up" style="color:#616571;">Pengertian : Anggota suatu populasi yang mampu mengadakan pertukaran gen atau melakukan perkawinan secara alami (Interbreeding).</p>
+            <p class="fw-bold " data-aos="zoom-in-up" style="color:#616571;">
               Spesies merupakan puncak dari proses evolusi.<br />
               Spesies dapat menghasilkan keturunan yang fertil. Keturunan fertil merupakan keturunan yang jika dikawinkan dengan spesies yang sejenis akan menghasilkan embrio baru atau keturunan tersebut juga bisa menghasilkan keturunan
               lain.<br />
@@ -124,7 +124,7 @@
       </div>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
-          fill="#ffff"
+          fill="#333744"
           fill-opacity="1"
           d="M0,192L34.3,208C68.6,224,137,256,206,234.7C274.3,213,343,139,411,117.3C480,96,549,128,617,149.3C685.7,171,754,181,823,170.7C891.4,160,960,128,1029,144C1097.1,160,1166,224,1234,229.3C1302.9,235,1371,181,1406,154.7L1440,128L1440,320L1405.7,320C1371.4,320,1303,320,1234,320C1165.7,320,1097,320,1029,320C960,320,891,320,823,320C754.3,320,686,320,617,320C548.6,320,480,320,411,320C342.9,320,274,320,206,320C137.1,320,69,320,34,320L0,320Z"
         ></path>
@@ -136,7 +136,7 @@
     <section id="pengisolasian">
       <div class="container" style="padding-bottom: 4rem">
         <div class="row text-center" style="padding-bottom: 2rem">
-          <h2 class="fw-bold" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000">Mekanisme Pengisolasian</h2>
+          <h2 class="fw-bold" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000" style="color: #f7f7f7;">Mekanisme Pengisolasian</h2>
         </div>
 
         <div class="row">
@@ -144,8 +144,8 @@
             <img src="asset/1.png" class="img-custom" data-aos="fade-left" />
           </div>
           <div class="col-md-6 col-sm-12">
-            <p class="fw-bold text-secondary mt-3" data-aos="zoom-in-up">Pengertian : Beberapa macam penghalang yang efektif mencegah terjadinya pertukaran gen antar populasi.</p>
-            <p class="fw-bold text-secondary" data-aos="zoom-in-up">
+            <p class="fw-bold  mt-3" data-aos="zoom-in-up" style="color: #f7f7f7;">Pengertian : Beberapa macam penghalang yang efektif mencegah terjadinya pertukaran gen antar populasi.</p>
+            <p class="fw-bold " data-aos="zoom-in-up" style="color: #f7f7f7;">
               Terjadi Ketika suatu populasi terisolasi dari sekumpulan populasi utama dan lukang gen terisolasi selama ratusan bahka ribuan tahun.<br />
               Ada 2 tipe spesiasi mekanisme pengisolasian yaitu:
               <br />
@@ -156,24 +156,24 @@
         </div>
 
         <div class="row" style="margin-bottom: 5rem; margin-top: 5rem" data-aos="fade-up">
-          <div id="carouselExampleControlsNoTouching" class="carousel carousel-dark slide" data-bs-touch="false" data-bs-interval="false">
+          <div id="carouselExampleControlsNoTouching" class="carousel  slide" data-bs-touch="false" data-bs-interval="false">
             <div class="carousel-inner text-center">
               <div class="carousel-item active">
-                <div class="card shadow mb-3" style="width: 18rem; border-radius: 15px; margin: auto">
+                <div class="card shadow mb-3" style="width: 18rem; border-radius: 15px; margin: auto;background-color: #616571;">
                   <div class="card-body">
-                    <p class="card-text fw-bold">Sepesiasi Alopatrik</p>
+                    <p class="card-text fw-bold" style="color: #f7f7f7;">Sepesiasi Alopatrik</p>
                     <img src="asset/alopatrik.png" width="200px" height="200px" alt="" />
-                    <a href="alopatrik.html" class="btn btn-secondary btn-sm mt-3 fw-bold">Selengkapnya =></a>
+                    <a href="alopatrik.html" class="btn btn-info btn-sm mt-3 fw-bold d-grid" style="color: #f7f7f7;">Selengkapnya =></a>
                   </div>
                 </div>
               </div>
 
               <div class="carousel-item">
-                <div class="card shadow mb-3" style="width: 18rem; border-radius: 15px; margin: auto">
+                <div class="card shadow mb-3" style="width: 18rem; border-radius: 15px; margin: auto;background-color: #616571;">
                   <div class="card-body">
-                    <p class="card-text fw-bold">Sepesiasi Simpatrik</p>
+                    <p class="card-text fw-bold" style="color: #f7f7f7;">Sepesiasi Simpatrik</p>
                     <img src="asset/simpatrik.png" width="200px" height="200px" alt="" />
-                    <a href="simpatrik.html" class="btn btn-secondary btn-sm mt-3 fw-bold">Selengkapnya =></a>
+                    <a href="simpatrik.html" class="btn btn-info btn-sm mt-3 fw-bold d-grid" style="color: #f7f7f7;">Selengkapnya =></a>
                   </div>
                 </div>
               </div>
@@ -192,7 +192,7 @@
       </div>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
-          fill="#e2edff"
+          fill=" #f7f7f7"
           fill-opacity="1"
           d="M0,192L34.3,208C68.6,224,137,256,206,234.7C274.3,213,343,139,411,117.3C480,96,549,128,617,149.3C685.7,171,754,181,823,170.7C891.4,160,960,128,1029,144C1097.1,160,1166,224,1234,229.3C1302.9,235,1371,181,1406,154.7L1440,128L1440,320L1405.7,320C1371.4,320,1303,320,1234,320C1165.7,320,1097,320,1029,320C960,320,891,320,823,320C754.3,320,686,320,617,320C548.6,320,480,320,411,320C342.9,320,274,320,206,320C137.1,320,69,320,34,320L0,320Z"
         ></path>
@@ -201,11 +201,11 @@
     <!-- Akhir Pengisolasian -->
 
     <!-- Istilah -->
-    <section id="istilah" style="background-color: #e2edff">
+    <section id="istilah" style="background-color: #f7f7f7">
       <div class="container" style="padding-bottom: 4rem">
         <div class="row text-center" style="padding-bottom: 2rem">
           <div class="col-12">
-            <h2 class="fw-bold" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000">Istilah Dalam Spesiasi</h2>
+            <h2 class="fw-bold" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000" style="color: #616571;;">Istilah Dalam Spesiasi</h2>
           </div>
         </div>
 
@@ -268,7 +268,7 @@
       </div>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
-          fill="#6bf3e8"
+          fill="#93deff"
           fill-opacity="1"
           d="M0,192L34.3,208C68.6,224,137,256,206,234.7C274.3,213,343,139,411,117.3C480,96,549,128,617,149.3C685.7,171,754,181,823,170.7C891.4,160,960,128,1029,144C1097.1,160,1166,224,1234,229.3C1302.9,235,1371,181,1406,154.7L1440,128L1440,320L1405.7,320C1371.4,320,1303,320,1234,320C1165.7,320,1097,320,1029,320C960,320,891,320,823,320C754.3,320,686,320,617,320C548.6,320,480,320,411,320C342.9,320,274,320,206,320C137.1,320,69,320,34,320L0,320Z"
         ></path>
@@ -277,8 +277,8 @@
     <!-- Aakhir Istilah -->
 
     <!-- footer -->
-    <footer style="background-color: #6bf3e8" class="p-3">
-      <p class="fst-italic fw-bold text-center">Created with By Kelompok 7</p>
+    <footer style="background-color: #93deff" class="p-3">
+      <p class="fst-italic fw-bold text-center" style="color: #f7f7f7;">Created with By Kelompok 7</p>
     </footer>
     <!-- akhir footer -->
 
